[package]
name = "nexus-collections"
version = "0.1.0"
description = "Slab-backed intrusive collections for low-latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["collections", "intrusive", "slab", "low-latency", "pre-allocated"]
categories = ["data-structures", "no-std"]

[dev-dependencies]
hdrhistogram = "7.5"

[features]
default = []
slab = ["dep:slab"]
nexus-slab = ["dep:nexus-slab"]
# Dev/testing feature that enables everything
full = ["slab", "nexus-slab"]

[dependencies.slab]
version = "0.4.11"
optional = true

[dependencies.nexus-slab]
version = "0.1.2"
optional = true

[lints]
workspace = true
