[package]
name = "nexus-queue"
description = "High-performance lock-free ring buffer queues for trading systems"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spsc", "mpsc", "ring-buffer", "queue", "lock-free"]
categories = ["concurrency", "data-structures", "no-std"]

[dependencies]
crossbeam-utils = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-queue = "0.3.12"
rtrb = "0.3.2"

[lints]
workspace = true

[[bench]]
name = "perf_spsc_bounded"
harness = false

[[bench]]
name = "perf_spsc_bounded_latency"
harness = false

[[bench]]
name = "perf_rtrb"
harness = false

[[bench]]
name = "perf_rtrb_latency"
harness = false

[[bench]]
name = "perf_spsc_overwriting_latency"
harness = false

[[bench]]
name = "perf_crossbeam"
harness = false

[[bench]]
name = "perf_crossbeam_latency"
harness = false

