[package]
name = "nexus-queue"
description = "High-performance lock-free spsc ring buffer for low latency systems"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spsc", "ring-buffer", "queue", "lock-free"]
categories = ["concurrency", "data-structures", "no-std"]

[dependencies]
crossbeam-utils = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-queue = "0.3.12"
hdrhistogram = "7.5.4"
rtrb = "0.3.2"

[lints]
workspace = true

[[bench]]
name = "perf_spsc_bounded"
harness = false

[[bench]]
name = "perf_spsc_bounded_latency"
harness = false

[[bench]]
name = "perf_rtrb"
harness = false

[[bench]]
name = "perf_rtrb_latency"
harness = false

[[bench]]
name = "perf_crossbeam"
harness = false

[[bench]]
name = "perf_crossbeam_latency"
harness = false

[[bench]]
name = "profile_spsc"
harness = false

[[bench]]
name = "profile_rtrb"
harness = false

[[bench]]
name = "profile_crossbeam"
harness = false

