[package]
name = "nexus-queue"
version = "0.2.2"
description = "High-performance lock-free SPSC ring buffer for low-latency systems"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spsc", "ring-buffer", "queue", "lock-free"]
categories = ["concurrency", "data-structures", "no-std"]

[dependencies]
crossbeam-utils.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-queue = "0.3"
hdrhistogram = "7.5"
rtrb = "0.3"

[lints]
workspace = true

[[bench]]
name = "perf_spsc_bounded"
harness = false

[[bench]]
name = "perf_spsc_bounded_latency"
harness = false

[[bench]]
name = "perf_rtrb"
harness = false

[[bench]]
name = "perf_rtrb_latency"
harness = false

[[bench]]
name = "perf_crossbeam"
harness = false

[[bench]]
name = "perf_crossbeam_latency"
harness = false

[[bench]]
name = "profile_spsc"
harness = false

[[bench]]
name = "profile_rtrb"
harness = false

[[bench]]
name = "profile_crossbeam"
harness = false
