[package]
name = "nexus-slab"
version = "0.1.2"
description = "Pre-allocated slab with OS-level memory control (mlock, huge pages)"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Memory", "Win32_System_SystemInformation"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7.5"
slab = "0.4"

[lints]
workspace = true

[[example]]
name = "perf_slab_compare"
harness = false

[[example]]
name = "perf_insert_cycles"
harness = false

[[example]]
name = "perf_get_cycles"
harness = false

[[example]]
name = "perf_churn_cycles"
harness = false

[[example]]
name = "perf_indexing_cycles"
harness = false

[[example]]
name = "perf_mixed_cycles"
harness = false

[[bench]]
name = "slab_comparison"
harness = false
