[package]
name = "nexus-slot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-queue = "0.3.12"
hdrhistogram = "7.5.4"
seqlock = "0.2.0"

[lints]
workspace = true

[[bench]]
name = "perf_slot"
harness = false

[[bench]]
name = "perf_slot_latency"
harness = false

[[bench]]
name = "profile_slot"
harness = false

